--- a/chevy.css
+++ b/chevy.css
@@ -15,12 +15,12 @@ body {
   width: 100vw;
 }
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
-} */
+}
 #navBar {
   height: 10vmin;
-  width: 98vw;
+  width: 100vw;
   margin: auto;
   background-color: rgb(0, 0, 0);
   display: flex;
@@ -516,18 +516,21 @@ body {
 }
 
 #getSilverado {
-  height: 11vmin;
-  width: 68vw;
+  height: 13vmin;
+  width: 70vw;
   background-color: yellow;
   position: absolute;
   top: -7vmin;
+  left: -3vmin;
   z-index: 1;
   font-size: 7.5vmin;
   font-family: fantasy;
   font-weight: 800;
   text-align: center;
   align-items: center;
-  font-style: italic;
+  /* font-style: italic; */
+  padding-top: 2vmin;
+  transform: skewX(-24deg);
 }
 
 #bottomGolioth {
@@ -578,7 +581,7 @@ body {
   padding-left: 5vmin;
   padding-right: 6vmin;
   font-family: Roboto Condensed, sans-serif;
-  font-size: 2.7vmin;
+  font-size: 3vmin;
   text-align: left;
   padding-bottom: 1vmin;
   padding-top: 2vmin;
@@ -641,16 +644,18 @@ body {
 }
 
 #cutomPiantGoliathTitle {
-  height: 11vmin;
+  height: 15vmin;
   width: 61vw;
   background-color: yellow;
   z-index: 10;
   position: absolute;
-  top: -8vmin;
-  right: 0px;
-  padding-left: 5vw;
+  top: -9vmin;
+  right: 0vw;
+  padding-left: 10vw;
+  transform: skew(0deg);
   font-size: 3.5vmin;
   padding-top: 2vmin;
+  /* display: none; */
   font-family: Roboto Condensed, sans-serif;
 }
 #section8 {
@@ -935,15 +940,260 @@ input[type="color"] {
 }
 
 #engine {
-  height: 60vh;
-  width: 990vw;
-  background-color: red;
-  z-index: 20;
+  height: 69vw;
+  width: 100vw;
+  z-index: 0;
   position: relative;
   top: 133vmin;
-  left: 0;
-  background-image: url("engine.jpg");
+  left: 0vmin;
   background-repeat: no-repeat;
   background-size: cover;
+  /* border: 2px solid red; */
+}
+#enginePic {
+  height: 66vw;
+  width: 100vw;
+  position: absolute;
+  background-image: url("engine2.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: 1;
+  background-position-y: center;
+}
+#noHood {
+  height: 69vw;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("noHood2.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: 2;
+}
+#hood {
+  height: 55vw;
+  width: 99vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("hood.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 3;
+  background-position-y: top;
+  /* border: 2px solid red; */
 }
 
+#peekEngine {
+  height: 14vmin;
+  width: auto;
+  background-color: yellow;
+  position: absolute;
+  top: -4vmin;
+  left: -4vmin;
+  padding-left: 2vmin;
+  z-index: 1;
+  font-size: 6.5vmin;
+  padding-right: 29vmin;
+  font-family: fantasy;
+  font-weight: 800;
+  text-align: center;
+  align-items: center;
+  padding-top: 3vmin;
+  padding-right: 5vw;
+  padding-left: 9vw;
+  transform: skewX(-20deg);
+  z-index: 4;
+}
+@media only screen and (max-width: 870px) {
+  #peekEngine {
+    font-size: 5.5vmin;
+  }
+}
+@media only screen and (max-width: 783px) {
+  #peekEngine {
+    /* font-size: 4vmin; */
+  }
+}
+#openHood {
+  height: inherit;
+  width: inherit;
+  position: absolute;
+  /* top: 74vmin; */
+  /* left: 0; */
+  z-index: 11;
+  /* background-color: red; */
+}
+
+#box1 {
+  height: 60vh;
+  width: 300px;
+  background-color: red;
+  position: absolute;
+  top: 56vmin;
+  z-index: 40;
+}
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 1px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 1;
+  transition: opacity 1s;
+  position: absolute;
+  bottom: 20%;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 4vw;
+  height: 20vmin;
+  background: yellow;
+  border: 8px solid black;
+  cursor: pointer;
+}
+
+#slideMe {
+  height: 14vmin;
+  width: 63vw;
+  background-color: yellow;
+  /* background-image: linear-gradient(45deg, grey, #497171); */
+  border: 2px solid black;
+  position: absolute;
+  bottom: -12vmin;
+  right: 6vmin;
+  padding-left: 2vmin;
+  z-index: 1;
+  font-size: 6.5vmin;
+  padding-right: 29vmin;
+  font-family: fantasy;
+  font-weight: 800;
+  text-align: center;
+  align-items: center;
+  padding-top: 3vmin;
+  padding-right: 5vw;
+  padding-left: 9vw;
+  transform: skewX(-20deg);
+  z-index: 4;
+}
+
+@media only screen and (max-width: 870px) {
+  #slideMe {
+    font-size: 5.5vmin;
+  }
+}
+@media only screen and (max-width: 783px) {
+  #slideMe {
+    font-size: 4vmin;
+  }
+}
+
+#soundsGood {
+  height: 77vmin;
+  width: 100vw;
+  background-color: #ffc929;
+  position: relative;
+  top: 157vmin;
+}
+#soundsGoodTop1 {
+  height: 40vw;
+  width: 16vw;
+  background-color: yellow;
+  /* border: 2px solid black; */
+  /* box-shadow: 24px 14px 11px -13px black; */
+  /* background-image: url("logo2.png"); */
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  background-position-y: bottom;
+  top: -4vw;
+  left: 10vw;
+  transform: skew(-25deg);
+  border-radius: 3vw 0px 3vw 0px;
+  z-index: 1;
+}
+#soundsGoodTop2 {
+  height: 6vw;
+  width: 10vw;
+  background-color: rgb(214 214 26);
+  /* border: 2px solid black; */
+  position: absolute;
+  top: -4vw;
+  left: 27.5vw;
+  transform: skew(34deg);
+  z-index: -1;
+}
+#logo2 {
+  height: 33%;
+  width: 20%;
+  background-color: blue;
+  position: absolute;
+  bottom: 3vw;
+  display: none;
+}
+
+#soundsGoodCar {
+  height: inherit;
+  width: 30%;
+  background-image: url("soundsGoodCar.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  right: 0%;
+}
+#grey {
+  height: 30vh;
+  width: 84vw;
+  background-color: black;
+  position: relative;
+  top: 166vmin;
+  right: -16vw;
+  z-index: -1;
+  /* transform: skewX(-21deg); */
+}
+#grey2 {
+  height: inherit;
+  width: 22%;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: -12vw;
+  z-index: -1;
+  transform: skewX(-21deg);
+  border-radius: 3vw;
+}
+#text1 {
+  height: 63%;
+  width: 82%;
+  /* background-color: red; */
+  position: absolute;
+  top: 21vmin;
+  right: 12%;
+  font-size: 8vw;
+  font-family: fantasy;
+  font-style: italic;
+  letter-spacing: 0.2vw;
+  z-index: 2;
+}
+#text2 {
+  height: 14%;
+  width: 29%;
+  background-color: transparent;
+  position: absolute;
+  top: 23vw;
+  left: 18%;
+  font-size: 2.5vw;
+  font-family: fantasy;
+  font-style: italic;
+  padding-left: 2vw;
+  z-index: 2;
+  border: 2px solid black;
+  border-radius: 24px;
+}
